Fixing month old broken links. Sad.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:b="urn:schemas-microsoft-com:office:publisher"
-xmlns="http://www.w3.org/TR/REC-html40">
-
+<!doctype html>
+<html>
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; utf-8">
 <meta name=ProgId content=Publisher.Document>
 <meta name=Generator content="Microsoft Publisher 10">
 <link rel=File-List href="index_files/filelist.xml">
@@ -74,7 +71,7 @@ absolute;z-index:11;left:405px;top:102px;width:349px;height:32px'>
 
 </span>
 
-<span style='mso-ignore:vglayout;position:
+<!-- <span style='mso-ignore:vglayout;position:
 absolute;z-index:12;left:10px;top:156px;width:740px;height:67px'><map
 name=MicrosoftOfficeMap0><area shape=Rect
 coords="185, 34, 370, 67" href="index_files/nomadic-family.htm"><area shape=Rect
@@ -83,7 +80,17 @@ coords="555, 0, 740, 34" href="index_files/ub-tours.htm"><area shape=Rect
 coords="370, 0, 555, 34" href="index_files/testimonials.htm"><area shape=Rect
 coords="185, 0, 370, 34" href="index_files/about-us.htm"></map><img border=0
 width=740 height=67 src="index_files/image011.gif" usemap="#MicrosoftOfficeMap0"
-v:shapes="_x0000_s1039 _x0000_s1041 _x0000_s1042 _x0000_s1043 _x0000_s1044 _x0000_s1045 _x0000_s1046 _x0000_s1047 _x0000_s1048 _x0000_s1049 _x0000_s1050 _x0000_s1051 _x0000_s1052 _x0000_s1053 _x0000_s1054 _x0000_s1055 _x0000_s1056 _x0000_s1057"></span>
+v:shapes="_x0000_s1039 _x0000_s1041 _x0000_s1042 _x0000_s1043 _x0000_s1044 _x0000_s1045 _x0000_s1046 _x0000_s1047 _x0000_s1048 _x0000_s1049 _x0000_s1050 _x0000_s1051 _x0000_s1052 _x0000_s1053 _x0000_s1054 _x0000_s1055 _x0000_s1056 _x0000_s1057"></span> -->
+
+<!-- Replacement navigation bar which does not rely upon a pregenerated image. -->
+<ul id="nav" style="position:absolute;z-index:100;left:10px;top:156px;">
+  <li><a href="http://nativemongolia.com/">Home</a></li>
+  <li><a href="/about-us.html">About Us</a></li>
+  <li><a href="/testimonials.html">Testimonials</a></li>
+  <li><a href="/ub-tours.html">Ulaanbaatar Tours</a></li>
+  <li><a href="/countryside-tours.html">Countryside Tours</a></li>
+  <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+</ul>
 
 <span style='mso-ignore:vglayout;position:
 absolute;z-index:13;left:31px;top:68px;width:108px;height:54px'><img width=108
