Standarizing image locations

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!doctype html>
 <html>
-<head>
-<meta http-equiv=Content-Type content="text/html; utf-8">
-<meta name=ProgId content=Publisher.Document>
-<meta name=Generator content="Microsoft Publisher 10">
-<link rel=File-List href="index_files/filelist.xml">
-<title>Home</title>
+  <head>
+    <meta http-equiv=Content-Type content="text/html; utf-8">
+    <title>Home</title>
 </head>
 
-<body link=maroon vlink="#660099" bgcolor="#B2B2B2"
-background="index_files/image001.jpg" style='tab-interval:.5in;margin:0'>
+<body background="index_files/image001.jpg" style='margin:0'>
 
 <div style='position:relative;width:7.9166in;height:48.0in'>
 <span style='mso-ignore:vglayout;position:
