Cleaning up the autogenerated code into something articulate.

--- a/index.html
+++ b/index.html
@@ -2,84 +2,30 @@
 <html>
   <head>
     <meta http-equiv=Content-Type content="text/html; utf-8">
+    <link rel=stylesheet type="text/css" href="style.css">
     <title>Home</title>
 </head>
 
-<body background="index_files/image001.jpg" style='margin:0'>
+<body background="img/background.jpg" style='margin:0'>
 
-<div style='position:relative;width:7.9166in;height:48.0in'>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:2;left:1px;top:1px;width:757px;height:134px'><img width=757
-height=134 src="index_files/image002.gif" v:shapes="_x0000_s1027"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:3;left:0px;top:220px;width:756px;height:4354px'><img
-width=756 height=4354 src="index_files/image003.gif" v:shapes="_x0000_s1028"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:4;left:9px;top:1006px;width:741px;height:64px'><img width=741
-height=64 src="index_files/image004.gif" v:shapes="_x0000_s1029 _x0000_s1031"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:5;left:8px;top:1001px;width:745px;height:4px'><img width=745
-height=4 src="index_files/image005.gif" v:shapes="_x0000_s1032"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:6;left:5px;top:252px;width:750px;height:3px'><img width=750
-height=3 src="index_files/image006.gif" v:shapes="_x0000_s1033"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:7;left:400px;top:28px;width:360px;height:125px'><img
-width=360 height=125 src="index_files/image008.jpg" v:shapes="_x0000_s1034"></span>
+<div style="width:90%;margin-left:auto;margin-right:auto;">
+  <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
+  <img src="img/index-horizon.jpg" class="align-right" style="position:relative;width:360px;height:125px;">
+  <p style="position:absolute;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
+    <strong>Discover Native Mongolia</strong></p>
+  <img src="img/logo.gif" >
+
 <span style='mso-ignore:vglayout;position:
 absolute;z-index:8;left:-1px;top:135px;width:396px;height:3px'><img width=396
-height=3 src="index_files/image009.gif" v:shapes="_x0000_s1035"></span>
+height=3 src="img/top-blue.gif" v:shapes="_x0000_s1035"></span>
 <span style='mso-ignore:vglayout;position:
-absolute;z-index:9;left:392px;top:135px;width:360px;height:3px'><img width=360
-height=3 src="index_files/image010.gif" v:shapes="_x0000_s1036"></span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:10;left:396px;top:5px;width:358px;height:21px'>
+absolute;z-index:9;left:392px;top:131px;width:360px;height:3px'><p width=360
+height=3 style="position:relative;z-index:5000;background-color:white;width:360px;height:3px;">&nbsp;</p></span>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=358 height=21 style='vertical-align:top'>
-  <div v:shape="_x0000_s1037" style='padding:2.85pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoTagline><span style='font-size:7.65pt;line-height:100%;
-  font-family:Verdana;mso-latin-font-family:Verdana;mso-greek-font-family:Verdana;
-  mso-cyrillic-font-family:Verdana;mso-latinext-font-family:Verdana;language:
-  EN;mso-ansi-language:EN'>Discover Native Mongolia<o:p></o:p></span></p>
-  </div>
-  </td>
- </tr>
-</table>
-
-</span>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:11;left:405px;top:102px;width:349px;height:32px'>
-
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=349 height=32 valign=middle style='vertical-align:top'>
-  <div v:shape="_x0000_s1038" style='padding:3.0pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoOrganizationName><span style='font-size:14.6pt;line-height:100%;
-  font-family:Verdana;language:EN;mso-ansi-language:EN'>TTNTours<o:p></o:p></span></p>
-  </div>
-  </td>
- </tr>
-</table>
-
-</span>
-
-<!-- <span style='mso-ignore:vglayout;position:
-absolute;z-index:12;left:10px;top:156px;width:740px;height:67px'><map
-name=MicrosoftOfficeMap0><area shape=Rect
-coords="185, 34, 370, 67" href="index_files/nomadic-family.htm"><area shape=Rect
-coords="0, 34, 185, 67" href="index_files/countryside-tours.htm"><area shape=Rect
-coords="555, 0, 740, 34" href="index_files/ub-tours.htm"><area shape=Rect
-coords="370, 0, 555, 34" href="index_files/testimonials.htm"><area shape=Rect
-coords="185, 0, 370, 34" href="index_files/about-us.htm"></map><img border=0
-width=740 height=67 src="index_files/image011.gif" usemap="#MicrosoftOfficeMap0"
-v:shapes="_x0000_s1039 _x0000_s1041 _x0000_s1042 _x0000_s1043 _x0000_s1044 _x0000_s1045 _x0000_s1046 _x0000_s1047 _x0000_s1048 _x0000_s1049 _x0000_s1050 _x0000_s1051 _x0000_s1052 _x0000_s1053 _x0000_s1054 _x0000_s1055 _x0000_s1056 _x0000_s1057"></span> -->
-
+<p>TTNTours</p>
+</div>
 <!-- Replacement navigation bar which does not rely upon a pregenerated image. -->
-<ul id="nav" style="position:absolute;z-index:100;left:10px;top:156px;">
+<ul id="nav">
   <li><a href="http://nativemongolia.com/">Home</a></li>
   <li><a href="/about-us.html">About Us</a></li>
   <li><a href="/testimonials.html">Testimonials</a></li>
@@ -88,9 +34,8 @@ v:shapes="_x0000_s1039 _x0000_s1041 _x0000_s1042 _x0000_s1043 _x0000_s1044 _x000
   <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
 </ul>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:13;left:31px;top:68px;width:108px;height:54px'><img width=108
-height=54 src="index_files/image013.gif" v:shapes="_x0000_s1058 _x0000_s1060 _x0000_s1061"></span>
+<img height=3 src="img/navbar-bottom.gif">
+
 <span style='mso-ignore:vglayout;position:
 absolute;z-index:14;left:448px;top:532px;width:232px;height:28px'>
 
@@ -201,6 +146,8 @@ height=3 src="index_files/image017.gif" v:shapes="_x0000_s1069"></span>
 absolute;z-index:113;left:20px;top:776px;width:327px;height:182px'><img
 width=327 height=182 src="index_files/image019.jpg" v:shapes="_x0000_s1315"></span>
 </div>
+
+<img width=745 height=4 src="img/footer-bar.gif">
 
 </body>
 
