Fixed background image.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 
-<body background="img/background-mod.jpg" style="margin:0">
+<body background="img/background.jpg" style="margin:0">
 
 <div style="width:90%;margin-left:auto;margin-right:auto;">
   <!-- header div -->
