Fixing about-us

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <!-- Column of text inset a little inside of the larger div -->
-    <div class="content" style="width:80%;">
+    <div class="content">
       <p>Welcome to the home of TTNTours! We are pleased that you found us!</p>
       
       <p>We are a small tourist company serving the independent traveler in Mongolia.
@@ -66,6 +66,7 @@
     </div>
   </div>
 
+  <!-- footer -->
   <img height=3 src="img/bottom-blue.gif" style="width:100%;">
 
   <div>
