--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <div style="background-color:white;width:700px;position:relative;left:15px;z-index:-10;">
       <h3 style="color:#066;">To Contact Us:</h3>
       <p>USA Phone: 218-201-0488 (Janlyn Gosse)</p>
-      <p>E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
-      <p>Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
+      <p class="no-indent">E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
+      <p class="no-indent">Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
     </div>
     
   </div>
