--- a/testimonials.html
+++ b/testimonials.html
@@ -1,169 +1,110 @@
-<html xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
-<link id=Main-File rel=Main-File href="../index.htm">
-<title>Testimonials</title>
-</style>
+<!doctype html>
+<html>
+  <head>
+    <meta http-equiv=Content-Type content="text/html; utf-8">
+    <link rel=stylesheet type="text/css" href="style.css">
+    <title>Testimonials</title>
 </head>
 
-<body link=maroon vlink="#660099" bgcolor=white background=image049.gif
-style='tab-interval:.5in;margin:0'>
+<body background="img/background.jpg" style="margin:0">
+<div style="width:90%;margin-left:auto;margin-right:auto;">
+  <!-- header div -->
+  <div style="height:130px;">
+    <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
+      <strong>Discover Native Mongolia</strong></p>
+    
+    <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
+    <img src="img/top-blue.gif" style="position:absolute;top:115px;width:90%;">
+    <p height=3 class="align-right" style="position:absolute;top:115px;background-color:white;width:360px;height:3px;right:5%;">&nbsp;</p>
+    <img src="img/testimony-flower.gif" class="align-right" style="position:relative;z-index:-8;width:360px;height:125px;">
+    <img src="img/logo.gif" style="position:relative;top:40px;">
 
-<div style='position:relative;width:7.9166in;height:48.0in'>
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:58;left:1px;top:1px;width:757px;height:134px'><img width=757
-height=134 src=image002.gif v:shapes="_x0000_s1175"></span>
- <v:textbox style='mso-column-margin:2mm' inset="2.88pt,2.88pt,2.88pt,2.88pt">
-  <div dir=ltr>
-  <h3><span style='language:EN;mso-ansi-language:EN'>My<span
-  style='mso-spacerun:yes'>  </span>involvement with TTNTours by Janlyn Gosse<o:p></o:p></span></h3>
-  <h3><span style='language:EN;mso-ansi-language:EN'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></h3>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>I
-  visited Mongolia as an independent traveler in the summer of 2009 and while
-  there<span style='mso-spacerun:yes'>  </span>I met Tsoogii at a nature
-  reserve in the Gobi.<span style='mso-spacerun:yes'>  </span>We became friends
-  immediately!<span style='mso-spacerun:yes'>  </span>I got to know her husband
-  and children and stayed with them in Ulanbaatar.<span
-  style='mso-spacerun:yes'>  </span>In addition, I was privileged to travel
-  with her brother, Tsende, to their home village and to meet their parents as
-  well as many members of the extended family.<span style='mso-spacerun:yes'> 
-  </span>I have also been honored to meet members of Boroo’s family.<span
-  style='mso-spacerun:yes'>  </span>These people are hospitable, interesting
-  and kind.<span style='mso-spacerun:yes'>  </span>Both families are involved
-  in the couple’s new venture, TTNTours.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>When I
-  heard that Tsoogii and Boroo wanted to open their own tour business, I was
-  very pleased and wanted to help in any way that I could.<span
-  style='mso-spacerun:yes'>  </span>I offered to help them get a website set up
-  and to be an American contact person.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>I was
-  happy to do this because I know what kind of people Tsoogii and Boroo
-  are.<span style='mso-spacerun:yes'>  </span>I would not hesitate to recommend
-  them to any of my friends or family members because I know that they can be
-  trusted.<span style='mso-spacerun:yes'>  </span>They truly desire to use
-  their skills and background to help visitors learn about the real
-  Mongolia.<span style='mso-spacerun:yes'>  </span>They are also caring,
-  trustworthy people that you can feel safe entrusting yourself to.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>Traveling
-  in Mongolia is very different from almost anywhere else in the world.<span
-  style='mso-spacerun:yes'>  </span>It has an interesting mix of new and very
-  old.<span style='mso-spacerun:yes'>  </span>On the one hand, in Ulanbaatar
-  you can see some of the newest and most expensive vehicles made.<span
-  style='mso-spacerun:yes'>  </span>On the other hand, you can go to the
-  countryside and observe people living in pretty much the same way that they
-  have for millennia.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>However,
-  it is not easy to access this culture.<span style='mso-spacerun:yes'> 
-  </span>You can’t simply grab a roadmap, rent a car, and hit the road as you
-  can in many Western countries.<span style='mso-spacerun:yes'>  </span>It is
-  imperative to have some type of guide in order to visit and understand this
-  place.<span style='mso-spacerun:yes'>  </span><o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>Travel
-  and tourism in Mongolia are much more personal than in many other
-  places:<span style='mso-spacerun:yes'>  </span>most of the country doesn’t
-  even have hotels;<span style='mso-spacerun:yes'>  </span>it is impossible for
-  large tourist buses to navigate across the land.<span
-  style='mso-spacerun:yes'>  </span>Since there isn’t the typical tourism
-  infrastructure in place, interactions happen at a more personal level.<span
-  style='mso-spacerun:yes'>  </span>When traveling cross country, for example,
-  one is reliant upon the kindness of the nomads that one encounters. This is
-  part of the charm of the area, but again, also something that makes travel
-  here more difficult.<o:p></o:p></span></p>
-  <p class=MsoBodyText3><span style='language:EN;mso-ansi-language:EN'>If you
-  are seeking a personal and up close view of this amazing land and culture, I
-  highly recommend that you contact Tsoogii.<span style='mso-spacerun:yes'>  
-  </span>She understands the needs of tourists, she speaks English!, and she
-  knows how to arrange travel.<span style='mso-spacerun:yes'>  </span>In this
-  sometimes bewildering and confusing land, she will be someone that you can
-  absolutely trust. </span><span style='language:EN'><o:p></o:p></span></p>
+    <p style="color:white;text-align:right;position:absolute;top:50px;right:5%;font-size:150%;">
+      <strong>TTNTours</strong></p>
   </div>
- </v:textbox>
-<!-- </v:rect><![endif]--><!--[if !vml]><span style='mso-ignore:vglayout;position:
-absolute;z-index:59;left:1px;top:253px;width:757px;height:4356px'><img
-width=757 height=4356 src=image063.gif -->
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:60;left:9px;top:1006px;width:741px;height:64px'><img
-width=741 height=64 src=image064.gif v:shapes="_x0000_s1177 _x0000_s1179"></span>
+  <ul id="nav">
+    <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
+    <li><a href="/about-us.html">About Us</a></li>
+    <li><a href="/testimonials.html">Testimonials</a></li>
+    <li><a href="/ub-tours.html">Ulaanbaatar Tours</a></li>
+    <li><a href="/countryside-tours.html">Countryside Tours</a></li>
+    <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
+  </ul>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:61;left:8px;top:1001px;width:745px;height:4px'><img width=745
-height=4 src=image005.gif v:shapes="_x0000_s1180"></span>
+  <img height=3 src="img/navbar-bottom.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:62;left:5px;top:252px;width:750px;height:3px'><img width=750
-height=3 src=image006.gif v:shapes="_x0000_s1181"></span>
+  <!-- <!--div-> area containing the content below the navbar -->
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:63;left:394px;top:28px;width:364px;height:125px'><img
-width=364 height=125 src=image065.gif v:shapes="_x0000_s1182"></span>
+<!-- Originally written by Janlyn Gosse.
+     The liberty has been taken by Shaun Gosse to
+     edit the title. -->
+  <center><h2 style="width:50%">Meeting TTNTours</h2>
+    <h3>Janlyn Gosse</h3>
+  </center>
+  <div class="content" style="width:100%">
+    <img src="img/mom.jpg" class="align-left">  
+  <p>I visited Mongolia as an independent traveler in the summer of 2009 and while
+    there I met Tsoogii at a nature reserve in the Gobi. We became friends
+    immediately! I got to know her husband and children and stayed with them in Ulanbaatar.
+    In addition, I was privileged to travel with her brother, Tsende, to their home village
+    and to meet their parents as well as many members of the extended family. I have also been
+    honored to meet members of Boroo’s family. These people are hospitable, interesting
+    and kind. Both families are involved in the couple’s new venture, TTNTours.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:64;left:-1px;top:135px;width:396px;height:3px'><img width=396
-height=3 src=image009.gif v:shapes="_x0000_s1183"></span>
+  <p>When I heard that Tsoogii and Boroo wanted to open their own tour business, I was
+    very pleased and wanted to help in any way that I could. I offered to help them get a website set up
+    and to be an American contact person.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:65;left:392px;top:135px;width:360px;height:3px'><img
-width=360 height=3 src=image010.gif v:shapes="_x0000_s1184"></span>
+  <p>I was happy to do this because I know what kind of people Tsoogii and Boroo
+    are. I would not hesitate to recommend them to any of my friends or family members because I know that they can be
+    trusted.They truly desire to use their skills and background to help visitors learn about the real
+    Mongolia.They are also caring, trustworthy people that you can feel safe entrusting yourself to.</p>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:66;left:396px;top:5px;width:358px;height:21px'>
+  <p>Traveling in Mongolia is very different from almost anywhere else in the world. It has an interesting mix of new and very
+    old.On the one hand, in Ulanbaatar you can see some of the newest and most expensive vehicles made. On the
+    other hand, you can go to the countryside and observe people living in pretty much the same way that they
+    have for millennia.</p>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=358 height=21 style='vertical-align:top'>
-  <div v:shape="_x0000_s1185" style='padding:2.85pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoTagline><span style='font-size:7.65pt;line-height:100%;
-  font-family:Verdana;mso-latin-font-family:Verdana;mso-greek-font-family:Verdana;
-  mso-cyrillic-font-family:Verdana;mso-latinext-font-family:Verdana;language:
-  EN;mso-ansi-language:EN'>Discover Native Mongolia<o:p></o:p></span></p>
+  <p>However, it is not easy to access this culture. You can’t simply grab a roadmap, rent a car, and hit the road as you
+    can in many Western countries. It is imperative to have some type of guide in order to visit and understand this
+    place. </p>
+
+  <p>Travel and tourism in Mongolia are much more personal than in many other
+    places: most of the country doesn’t even have hotels; it is impossible for
+    large tourist buses to navigate across the land. Since there isn’t the typical tourism
+    infrastructure in place, interactions happen at a more personal level. When traveling cross country, for example,
+    one is reliant upon the kindness of the nomads that one encounters. This is
+    part of the charm of the area, but again, also something that makes travel
+    here more difficult.</p>
+
+  <p>If you are seeking a personal and up close view of this amazing land and culture, I
+    highly recommend that you contact Tsoogii. She understands the needs of tourists, she speaks English!, and she
+    knows how to arrange travel. In this sometimes bewildering and confusing land, she will be someone that you can
+    absolutely trust.</p>
+
   </div>
-  </td>
- </tr>
-</table>
+<center><img src="img/tsoogii-mom.jpg"></center>
 
-</span>
+    <!-- footer -->
+    <img height=3 src="img/bottom-blue.gif" style="width:100%;">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:67;left:405px;top:102px;width:349px;height:32px'>
+    <div>
+      <div style="width:327px;" class="align-left">
+        <img height=182 src="img/soldiers.jpg">
+      </div>
 
-<table cellpadding=0 cellspacing=0>
- <tr>
-  <td width=349 height=32 valign=middle style='vertical-align:top'>
-  <div v:shape="_x0000_s1186" style='padding:3.0pt 2.85pt 2.85pt 2.85pt'
-  class=shape>
-  <p class=MsoOrganizationName><span style='font-size:14.6pt;line-height:100%;
-  font-family:Verdana;language:EN;mso-ansi-language:EN'>TTNTours<o:p></o:p></span></p>
-  </div>
-  </td>
- </tr>
-</table>
+      <div style="background-color:white;width:700px;position:relative;left:15px;z-index:-10;">
+        <h3 style="color:#066;">To Contact Us:</h3>
+        <p>USA Phone: 218-201-0488 (Janlyn Gosse)</p>
+        <p class="no-indent">E-mail: Tsoogii2000mon@yahoo.com (Tsoogii)</p>
+        <p class="no-indent">Alternate E-mail: Janlyn@snowgoose.biz (Janlyn Gosse)</p>
+      </div>
 
-</span>
+    </div>
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:68;left:10px;top:156px;width:740px;height:67px'><map
-name=MicrosoftOfficeMap0><area shape=Rect
-coords="185, 34, 370, 67" href="page0003.htm"><area shape=Rect
-coords="0, 34, 185, 67" href="page0002.htm"><area shape=Rect
-coords="555, 0, 740, 34" href="page0001.htm"><area shape=Rect
-coords="185, 0, 370, 34" href="page0005.htm"><area shape=Rect
-coords="0, 0, 185, 34" href="../index.htm"></map><img border=0 width=740
-height=67 src=image066.gif usemap="#MicrosoftOfficeMap0" v:shapes="_x0000_s1187 _x0000_s1189 _x0000_s1190 _x0000_s1191 _x0000_s1192 _x0000_s1193 _x0000_s1194 _x0000_s1195 _x0000_s1196 _x0000_s1197 _x0000_s1198 _x0000_s1199 _x0000_s1200 _x0000_s1201 _x0000_s1202 _x0000_s1203 _x0000_s1204 _x0000_s1205"></span>
+    <img style="width:80%;position:relative;left:10%;" height=4 src="img/footer-bar.gif">
 
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:69;left:31px;top:68px;width:108px;height:54px'><img width=108
-height=54 src=image013.gif v:shapes="_x0000_s1206 _x0000_s1208 _x0000_s1209"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:116;left:76px;top:816px;width:233px;height:174px'><img
-width=233 height=174 src=image068.jpg v:shapes="_x0000_s1318"></span>
-
-<span style='mso-ignore:vglayout;position:
-absolute;z-index:117;left:420px;top:812px;width:242px;height:180px'><img
-width=242 height=180 src=image070.jpg v:shapes="_x0000_s1319"></span>
 </div>
 
 </body>
