Black text on dark background == bad

--- a/testimonials.html
+++ b/testimonials.html
@@ -10,7 +10,7 @@
 <div style="width:90%;margin-left:auto;margin-right:auto;">
   <!-- header div -->
   <div style="height:130px;">
-    <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;">
+    <p style="position:absolute;z-index:2;right:5%;font-size:75%;margin-top:5px;padding-right:5px;color:white;">
       <strong>Discover Native Mongolia</strong></p>
     
     <img src="img/top-bar.gif" style="position:absolute;z-index:-10;width:90%;height:125px;">
