--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <li class="first"><a href="http://nativemongolia.com/">Home</a></li>
     <li><a href="/about-us.html">About Us</a></li>
     <li><a href="/testimonials.html">Testimonials</a></li>
-    <li><a href="/ub-tours.html">Ulaanbaatar Tours</a></li>
+    <li><a href="/ulanbaatar-tours.html">Ulaanbaatar Tours</a></li>
     <li><a href="/countryside-tours.html">Countryside Tours</a></li>
     <li><a href="/nomadic-family.html">Visit with Nomadic Family</a></li>
   </ul>
